Closed Bug 1818871 Opened 3 years ago Closed 3 years ago

Fix non-unified-build bustage in dom/ipc/ContentProcess.cpp

Categories

(Core :: Security: Process Sandboxing, defect, P2)

defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox110 --- unaffected
firefox111 --- unaffected
firefox112 --- fixed

People

(Reporter: janv, Assigned: janv)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

0:22.96 /Users/jvarga/Projects/Mozilla15/src/dom/ipc/ContentProcess.cpp:163:7: error: use of undeclared identifier 'IsContentSandboxEnabled'; did you mean 'AssertMacSandboxEnabled'?
 0:22.96   if (IsContentSandboxEnabled()) {
 0:22.96       ^~~~~~~~~~~~~~~~~~~~~~~
 0:22.96       AssertMacSandboxEnabled
 0:22.96 /Users/jvarga/Projects/Mozilla15/obj-ff-nightly-debug-optimized-hybrid/dist/include/mozilla/Sandbox.h:85:6: note: 'AssertMacSandboxEnabled' declared here
 0:22.96 void AssertMacSandboxEnabled();
 0:22.96      ^
 0:22.96 /Users/jvarga/Projects/Mozilla15/src/dom/ipc/ContentProcess.cpp:163:7: error: value of type 'void' is not contextually convertible to 'bool'
 0:22.96   if (IsContentSandboxEnabled()) {
 0:22.96       ^~~~~~~~~~~~~~~~~~~~~~~~~
 0:22.96 2 errors generated.
 0:22.96 make[4]: *** [ContentProcess.o] Error 1
 0:22.97 make[3]: *** [dom/ipc/target-objects] Error 2

Set release status flags based on info from the regressing bug 1772089

Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/73d972110761 Fix non-unified-build bustage in dom/ipc/ContentProcess.cpp; r=bobowen
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: