Bug 1818871 - Fix non-unified-build bustage in dom/ipc/ContentProcess.cpp; r=bobowen

Differential Revision: https://phabricator.services.mozilla.com/D170993